# autogit

./: pyproject.toml
autogit/: __init__.py  console.py
scripts/: autogit
tests/: test_autogit.py
